2007-11-02  Paolo Borelli  <pborelli@katamail.com>

	* src/file-manager/fm-directory-view.c:
	* src/nautilus-file-management-properties.c:
	* libnautilus-private/nautilus-icon-info.c:
	* libnautilus-private/nautilus-mime-application-chooser.c:
	Plug some minor memory leaks.

2007-11-02  Paolo Borelli  <pborelli@katamail.com>

        * src/file-manager/fm-icon-container.c:
        * src/file-manager/fm-list-view.c:
        * src/nautilus-shell.c:
        * src/nautilus-file-management-properties.c:
        * libnautilus-private/nautilus-column-utilities.c:
        * libnautilus-private/nautilus-column-utilities.h:
        * libnautilus-private/nautilus-column-chooser.c:
        * libnautilus-private/nautilus-column-chooser.h:
	Remove all uses of eel-string-list and update code to the new
	eel_preferences_[set|get]_string_array api.

	* libnautilus-private/nautilus-global-preferences.c:
	Update to the eel-enumerations api changes.

2007-11-02  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-customization-data.[ch]:
        * libnautilus-private/nautilus-desktop-directory.c:
        * libnautilus-private/nautilus-directory-async.c:
        * libnautilus-private/nautilus-directory-private.h:
        * libnautilus-private/nautilus-directory.[ch]:
        * libnautilus-private/nautilus-file-operations-progress.[ch]:
        * libnautilus-private/nautilus-file-private.h:
        * libnautilus-private/nautilus-file-utilities.c:
        * libnautilus-private/nautilus-file.[ch]:
        * libnautilus-private/nautilus-global-preferences.c:
        * libnautilus-private/nautilus-icon-dnd.c:
        * libnautilus-private/nautilus-metafile.c:
        * libnautilus-private/nautilus-monitor.c:
        * libnautilus-private/nautilus-program-choosing.c:
        * libnautilus-private/nautilus-query.h:
        * libnautilus-private/nautilus-search-directory.c:
        * libnautilus-private/nautilus-search-engine-tracker.c: